# aws-robomaker-hospital-world

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  fuel_utility.py  package.xml  requirements.txt  setup.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: hospital.launch  hospital.launch.py  view_hospital.launch  view_hospital.launch.py
log/: latest_build
models/aws_robomaker_hospital_curtain_closed_01/: model.config  model.sdf
models/aws_robomaker_hospital_curtain_closed_01/meshes/: aws_robomaker_hospital_curtain_closed_01_collision.dae
models/aws_robomaker_hospital_curtain_half_open_01/: model.config  model.sdf
models/aws_robomaker_hospital_curtain_half_open_01/meshes/: aws_robomaker_hospital_curtain_half_open_01_visual.dae
models/aws_robomaker_hospital_curtain_open_01/: model.config  model.sdf
models/aws_robomaker_hospital_elevator_01_car/: model.config  model.sdf
models/aws_robomaker_hospital_elevator_01_car/meshes/: aws_robomaker_hospital_elevator_01_car_collision.dae
models/aws_robomaker_hospital_elevator_01_door/meshes/: aws_robomaker_hospital_elevator_01_door_low.dae  aws_robomaker_hospital_elevator_01_door_visual.dae
models/aws_robomaker_hospital_elevator_01_portal/: model.config  model.sdf
models/aws_robomaker_hospital_elevator_01_portal/meshes/: aws_robomaker_hospital_elevator_01_portal_collision.dae  aws_robomaker_hospital_elevator_01_portal_low.dae
models/aws_robomaker_hospital_floor_01_ceiling/: model.config
models/aws_robomaker_hospital_floor_01_ceiling/meshes/: aws_robomaker_hospital_floor_01_ceiling_visual.dae
models/aws_robomaker_hospital_floor_01_floor/: model.sdf
models/aws_robomaker_hospital_floor_01_walls/: model.sdf
models/aws_robomaker_hospital_floor_01_walls/meshes/: aws_robomaker_hospital_floor_01_walls_collision.dae  aws_robomaker_hospital_floor_01_walls_visual.dae
models/aws_robomaker_hospital_floor_02_ceiling/: model.config
models/aws_robomaker_hospital_floor_02_ceiling/materials/: model.sdf
models/aws_robomaker_hospital_floor_02_ceiling/meshes/: aws_robomaker_hospital_floor_02_ceiling_collision.dae  aws_robomaker_hospital_floor_02_ceiling_visual.dae
models/aws_robomaker_hospital_floor_02_floor/: model.config  model.sdf
models/aws_robomaker_hospital_floor_02_walls/: model.sdf
models/aws_robomaker_hospital_hospitalsign_01/: model.config  model.sdf
models/aws_robomaker_hospital_nursesstation_01/: model.config  model.sdf
models/aws_robomaker_hospital_ramp_01/meshes/: aws_robomaker_hospital_ramp_01_collision.dae
models/aws_robomaker_residential_Carpet_01/meshes/: aws_Carpet_01_visual.DAE
models/aws_robomaker_residential_KitchenCabinet_01/: model.config  model.sdf
models/aws_robomaker_residential_KitchenCabinet_01/meshes/: aws_KitchenCabinet_01_collision.DAE  aws_KitchenCabinet_01_visual.DAE
models/aws_robomaker_residential_PortraitA_01/meshes/: aws_PortraitA_01_visual.DAE
models/aws_robomaker_residential_PortraitA_02/: model.config
models/aws_robomaker_residential_PortraitB_01/: model.sdf
models/aws_robomaker_residential_PortraitB_01/meshes/: aws_PortraitB_01_visual.DAE
models/aws_robomaker_residential_PortraitB_02/: model.sdf
models/aws_robomaker_residential_PortraitB_03/meshes/: aws_PortraitB_01_visual.DAE
models/aws_robomaker_residential_PortraitC_01/: model.config  model.sdf
models/aws_robomaker_residential_PortraitC_01/meshes/: aws_PortraitC_01_collision.DAE  aws_PortraitC_01_visual.DAE
models/aws_robomaker_residential_PortraitD_01/: model.config
models/aws_robomaker_residential_PortraitD_01/meshes/: aws_PortraitD_01_visual.DAE
models/aws_robomaker_residential_PortraitD_02/: model.sdf
models/aws_robomaker_residential_PortraitD_02/meshes/: aws_PortraitD_01_visual.DAE
models/aws_robomaker_residential_PortraitE_01/meshes/: aws_PortraitE_01_visual.DAE
models/aws_robomaker_residential_PortraitE_02/: model.sdf
models/aws_robomaker_residential_TV_02/: model.config
models/aws_robomaker_residential_Trash_01/: model.config
models/aws_robomaker_retail_Computer_01/: model.sdf
worlds/: hospital.world  hospital_three_floors.world  hospital_two_floors.world
(+87 files in other folders)
